vemo-app/main/default/objects/Account/fields/AssessAccount__c.field-meta.xml
<CustomField>
    <fullName>AssessAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this box is checked, the assessment process will run, regardless of the assessment date.</description>
    <inlineHelpText>If this box is checked, the assessment process will run, regardless of the assessment date.</inlineHelpText>
    <label>(Deprecate)Assess Account</label>
    <type>Checkbox</type>
</CustomField>