vemo-app/main/default/objects/Account/fields/AssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDate__c</fullName>
    <description>The date when this account will next be assessed.  The assessment process will run on any account where the assessment is today or in the past.</description>
    <inlineHelpText>The date when this account will next be assessed.  The assessment process will run on any account where the assessment is today or in the past.</inlineHelpText>
    <label>(Deprecate)Assessment Date</label>
    <type>Date</type>
</CustomField>