vemo-app/main/default/objects/Account/fields/AssessmentDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDayOfMonth__c</fullName>
    <defaultValue>16</defaultValue>
    <inlineHelpText>The default day of the month to perform this student's assessment.  This value copies to the Student Program level</inlineHelpText>
    <label>Assessment Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>