vemo-app/main/default/objects/Account/fields/AverageTuitionDiscountRate__c.field-meta.xml
<CustomField>
    <fullName>AverageTuitionDiscountRate__c</fullName>
    <label>Average Tuition Discount Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>