vemo-app/main/default/objects/Account/fields/BypassApproval__c.field-meta.xml
<CustomField>
    <fullName>BypassApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Approval</label>
    <type>Checkbox</type>
</CustomField>