vemo-app/main/default/objects/Account/fields/CampusServiceEmail__c.field-meta.xml
<CustomField>
    <fullName>CampusServiceEmail__c</fullName>
    <description>This field will be presented to the students for customer service contact information</description>
    <inlineHelpText>This field will be presented to the students for customer service contact information</inlineHelpText>
    <label>Campus Service Email</label>
    <type>Email</type>
</CustomField>