vemo-app/main/default/objects/Account/fields/CampusServiceMobile__c.field-meta.xml
<CustomField>
    <fullName>CampusServiceMobile__c</fullName>
    <description>This field will be presented to the students for customer service contact information</description>
    <inlineHelpText>This field will be presented to the students for customer service contact information</inlineHelpText>
    <label>Campus Service Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>