vemo-app/main/default/objects/Account/fields/CertificationProcess__c.field-meta.xml
<CustomField>
    <fullName>CertificationProcess__c</fullName>
    <label>Certification Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vemo</fullName>
            </value>
            <value>
                <fullName>CL4</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>