vemo-app/main/default/objects/Account/fields/DescriptionBlock__c.field-meta.xml
<CustomField>
    <fullName>DescriptionBlock__c</fullName>
    <label>Description Block</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>