vemo-app/main/default/objects/Account/fields/DetailBlock__c.field-meta.xml
<CustomField>
    <fullName>DetailBlock__c</fullName>
    <label>Detail Block</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>