vemo-app/main/default/objects/Account/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>The date when this account is due for payment</description>
    <inlineHelpText>The date when this account is due for payment</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>