vemo-app/main/default/objects/Account/fields/DueDayOfTheMonth__c.field-meta.xml
<CustomField>
    <fullName>DueDayOfTheMonth__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>The day of the month on which this student's payments are due.</inlineHelpText>
    <label>Due Day of the Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>