vemo-app/main/default/objects/Account/fields/EntryPoint__c.field-meta.xml
<CustomField>
    <fullName>EntryPoint__c</fullName>
    <label>Entry Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>