vemo-app/main/default/objects/Account/fields/FAMSystem__c.field-meta.xml
<CustomField>
    <fullName>FAMSystem__c</fullName>
    <label>FAM System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>