vemo-app/main/default/objects/Account/fields/InstitutionShortName__c.field-meta.xml
<CustomField>
    <fullName>InstitutionShortName__c</fullName>
    <label>Institution Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>