vemo-app/main/default/objects/Account/fields/InstitutionState__c.field-meta.xml
<CustomField>
    <fullName>InstitutionState__c</fullName>
    <label>Institution State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>