vemo-app/main/default/objects/Account/fields/IPEDSID__c.field-meta.xml
<CustomField>
    <fullName>IPEDSID__c</fullName>
    <label>IPEDS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>