vemo-app/main/default/objects/Account/fields/NextAutoPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>NextAutoPaymentDate__c</fullName>
    <description>The next date of the auto payment</description>
    <inlineHelpText>The next date of the auto payment</inlineHelpText>
    <label>Next Auto Payment Date</label>
    <type>Date</type>
</CustomField>