vemo-app/main/default/objects/Account/fields/NumberOfStudentsReceivingDiscounts__c.field-meta.xml
<CustomField>
    <fullName>NumberOfStudentsReceivingDiscounts__c</fullName>
    <description>Number of students receiving discounts</description>
    <inlineHelpText>Number of students receiving discounts</inlineHelpText>
    <label>Number of Students Receiving Discounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>