vemo-app/main/default/objects/Account/fields/PotentialAnnualVemoRevenue__c.field-meta.xml
<CustomField>
    <fullName>PotentialAnnualVemoRevenue__c</fullName>
    <description>Outside-in rough computation of potential Vemo revenue from school. 


Potential = Total Discount X Budget % for ISAs X Expected Recovery Rate X Vemo Share of Collections


Total Discount = Student Enrollment X Tuition X Avg Tuition Discount Rate


Budget for ISAs = 10%


Expected Recovery Rate = 50%


Vemo Share of Collections = 10% (7.5 - 12.5 range)</description>
    <inlineHelpText>Outside-in rough computation of potential Vemo revenue from school.</inlineHelpText>
    <label>Potential Annual Vemo Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>