vemo-app/main/default/objects/Account/fields/Receive_Annual_Statement__c.field-meta.xml
<CustomField>
    <fullName>Receive_Annual_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Annual Statement</label>
    <type>Checkbox</type>
</CustomField>