vemo-app/main/default/objects/Account/fields/RecordLabel__c.field-meta.xml
<CustomField>
    <fullName>RecordLabel__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Label</label>
    <type>Text</type>
</CustomField>