vemo-app/main/default/objects/Account/fields/SchoolLevel__c.field-meta.xml
<CustomField>
    <fullName>SchoolLevel__c</fullName>
    <label>School Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SchoolLevel</valueSetName>
    </valueSet>
</CustomField>