vemo-app/main/default/objects/Account/fields/SchoolLogoDocumentID__c.field-meta.xml
<CustomField>
    <fullName>SchoolLogoDocumentID__c</fullName>
    <label>School Logo Document ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>