vemo-app/main/default/objects/Account/fields/SchoolLogoURL__c.field-meta.xml
<CustomField>
    <fullName>SchoolLogoURL__c</fullName>
    <formula>$Setup.GlobalSettings__c.DocumentDownloadPrefix__c + SchoolLogoDocumentID__c +"&amp;oid=" +  $Organization.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Logo URL</label>
    <type>Text</type>
</CustomField>