vemo-app/main/default/objects/Account/fields/SchoolSecurity__c.field-meta.xml
<CustomField>
    <fullName>SchoolSecurity__c</fullName>
    <inlineHelpText>This field is used to share this student with the School Account with a matching School Security Field. For example a Student with a School Security of Purdue will be shared with the School Account that has a value of "Purdue" in its School Security field</inlineHelpText>
    <label>School Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School</valueSetName>
    </valueSet>
</CustomField>