vemo-app/main/default/objects/Account/fields/SchoolType__c.field-meta.xml
<CustomField>
    <fullName>SchoolType__c</fullName>
    <label>School Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SchoolType</valueSetName>
    </valueSet>
</CustomField>