vemo-app/main/default/objects/Account/fields/StewardshipDisbursementDonorGUID__c.field-meta.xml
<CustomField>
    <fullName>StewardshipDisbursementDonorGUID__c</fullName>
    <label>Stewardship Disbursement DonorGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>