vemo-app/main/default/objects/Account/fields/StewardshipPaymentDonorGUID__c.field-meta.xml
<CustomField>
    <fullName>StewardshipPaymentDonorGUID__c</fullName>
    <label>Stewardship Payment DonorGUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>