vemo-app/main/default/objects/Account/fields/StewardshipProcess__c.field-meta.xml
<CustomField>
    <fullName>StewardshipProcess__c</fullName>
    <label>Stewardship Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create Payment DonorGUID</fullName>
            </value>
            <value>
                <fullName>Create Disbursement DonorGUID</fullName>
            </value>
            <value>
                <fullName>Create Both Disbursement &amp; Payment DonorGUID</fullName>
            </value>
            <value>
                <fullName>DonorGUID Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>