vemo-app/main/default/objects/Account/fields/StudentCampusServiceAvailability__c.field-meta.xml
<CustomField>
    <fullName>StudentCampusServiceAvailability__c</fullName>
    <label>Student Campus Service Availability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>