vemo-app/main/default/objects/Account/fields/StudentCampusServiceEmail__c.field-meta.xml
<CustomField>
    <fullName>StudentCampusServiceEmail__c</fullName>
    <label>Student Campus Service Email</label>
    <type>Email</type>
</CustomField>