vemo-app/main/default/objects/Account/fields/StudentCampusServiceMobile__c.field-meta.xml
<CustomField>
    <fullName>StudentCampusServiceMobile__c</fullName>
    <label>Student Campus Service Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>