vemo-app/main/default/objects/Account/fields/StudentCampusServiceName__c.field-meta.xml
<CustomField>
    <fullName>StudentCampusServiceName__c</fullName>
    <label>Student Campus Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>