vemo-app/main/default/objects/Account/fields/StudentEnrollment__c.field-meta.xml
<CustomField>
    <fullName>StudentEnrollment__c</fullName>
    <description>Number of students enrolled</description>
    <inlineHelpText>Number of students enrolled</inlineHelpText>
    <label>Student Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>