vemo-app/main/default/objects/Account/fields/TitleBlock__c.field-meta.xml
<CustomField>
    <fullName>TitleBlock__c</fullName>
    <label>Title Block</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>