vemo-app/main/default/objects/Account/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <description>Tuition (sticker price) and fees for the school</description>
    <inlineHelpText>Tuition (sticker price) and fees for the school</inlineHelpText>
    <label>Tuition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>