vemo-app/main/default/objects/Account/fields/UnpaidFees__c.field-meta.xml
<CustomField>
    <fullName>UnpaidFees__c</fullName>
    <label>Unpaid Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>