vemo-app/main/default/objects/Account/fields/VemoAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>VemoAccountNumber__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Automatially generated number identifying the Student/Account. It is independent of any particular system (Salesforce, Auth0, CampusDoor, ATOM1, etc) and can be given to customers.</inlineHelpText>
    <label>Vemo Account Number</label>
    <type>AutoNumber</type>
</CustomField>