vemo-app/main/default/objects/Account/fields/VemoProductsServicesUsed__c.field-meta.xml
<CustomField>
    <fullName>VemoProductsServicesUsed__c</fullName>
    <label>Vemo Products Services Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>VemoProductsServices</valueSetName>
    </valueSet>
</CustomField>