vemo-app/main/default/objects/Account/fields/WebsiteStatus__c.field-meta.xml
<CustomField>
    <fullName>WebsiteStatus__c</fullName>
    <label>Website Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProvisioningStatus</valueSetName>
    </valueSet>
</CustomField>