vemo-app/main/default/objects/Account/fields/WebStyle__c.field-meta.xml
<CustomField>
    <fullName>WebStyle__c</fullName>
    <label>Web Style</label>
    <type>TextArea</type>
</CustomField>