vemo-app/main/default/objects/Account/recordTypes/SchoolAvailableProspect.recordType-meta.xml
<RecordType>
    <fullName>SchoolAvailableProspect</fullName>
    <active>true</active>
    <label>School - Available Prospect</label>
</RecordType>