vemo-app/main/default/objects/Account/recordTypes/SchoolCustomer.recordType-meta.xml
<RecordType>
    <fullName>SchoolCustomer</fullName>
    <active>true</active>
    <label>School - Customer</label>
</RecordType>