vemo-app/main/default/objects/Account/validationRules/AssessmentDayRange.validationRule-meta.xml
<ValidationRule>
    <fullName>AssessmentDayRange</fullName>
    <active>true</active>
    <description>The day of the month that the assessor job will run for this account. Valid values 1 thru 28. Default value = 16.</description>
    <errorConditionFormula>IsPersonAccount &amp;&amp;
OR(AssessmentDayOfMonth__c>28, 
AssessmentDayOfMonth__c&lt;1,
 ISNULL(AssessmentDayOfMonth__c))</errorConditionFormula>
    <errorDisplayField>AssessmentDayOfMonth__c</errorDisplayField>
    <errorMessage>Assessment Day of the Month must be between 1 and 28</errorMessage>
</ValidationRule>