vemo-app/main/default/objects/Account/validationRules/cannotChangeAccountName.validationRule-meta.xml
<ValidationRule>
    <fullName>cannotChangeAccountName</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.GlobalSettings__c.ValidationRules__c &amp;&amp;
 !$Setup.ApprovalSettings__c.AccountNameChangeAllowed__c &amp;&amp; 
!($Profile.Name = "System Administrator") &amp;&amp;
 PRIORVALUE(Name) != Name &amp;&amp; 
!($User.Username = "Automated Process")</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>This user cannot change the account name</errorMessage>
</ValidationRule>