vemo-app/main/default/objects/Account/validationRules/DueDayRange.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDayRange</fullName>
    <active>true</active>
    <description>Account due day of the month - The day of the month that will be the due date for this account. Valid values 1 thru 28. Default value = 1.</description>
    <errorConditionFormula>IsPersonAccount &amp;&amp; 
OR( DueDayOfTheMonth__c > 28,
DueDayOfTheMonth__c &lt; 1,
ISNULL(DueDayOfTheMonth__c))</errorConditionFormula>
    <errorDisplayField>DueDayOfTheMonth__c</errorDisplayField>
    <errorMessage>Due Day of the Month must be between 1 and 28</errorMessage>
</ValidationRule>