vemo-app/main/default/objects/Account/listViews/School_All_Customer.listView-meta.xml
<ListView>
    <fullName>School_All_Customer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.SchoolCustomer</value>
    </filters>
    <label>School - All Customer</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>